--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "^7.6.1",
+    "@panzoom/panzoom": "^4.4.1",
     "@svg-maps/ukraine": "^1.0.0",
     "core-js": "^3.15.1",
     "firebase": "^8.9.1",
     "nuxt": "^2.15.7",
-    "panzoom": "^9.4.2",
     "vue-svg-map": "^1.2.0",
     "vuetify": "^2.5.5"
   },
