--- a/firebase.json
+++ b/firebase.json
@@ -15,7 +15,14 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "headers": [ {
+      "source" : "**",
+      "headers" : [ {
+        "key" : "Access-Control-Allow-Origin",
+        "value" : "*"
+      } ]
+    }]
   },
   "emulators": {
     "functions": {
