--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.15.1",
     "firebase": "^8.9.1",
     "nuxt": "^2.15.7",
+    "vue-confetti": "^2.2.2",
     "vue-svg-map": "^1.2.0",
     "vuetify": "^2.5.5"
   },
